--- a/workers/Makefile
+++ b/workers/Makefile
@@ -1,6 +1,6 @@
 # vim:set sw=8 nosta:
 
-BINS=worker_example.so worker_single.so worker_fork.so
+BINS=worker_single.so worker_fork.so
 SUBDIRS=
 DESTDIR=
 
@@ -8,6 +8,7 @@ DESTDIR=
 all: $(BINS)
 
 install:
+	$(INSTALL_BIN) -d $(DESTDIR)/lib/hotplug2/
 	$(INSTALL_BIN) $(BINS) $(DESTDIR)/lib/hotplug2/
 
 worker_single.so: ../action.o ../uevent.o ../xmemutils.o \
@@ -19,3 +20,7 @@ worker_fork.so: ../action.o ../uevent.o ../xmemutils.o \
 		  ../rules/expression.o ../rules/execution.o ../rules/command.o
 
 include ../common.mak
+
+ifndef STATIC_WORKER
+  CFLAGS += $(FPIC)
+endif
