Import ASUS-MERLIN_380.70
Change-Id: I83748ad2c5c79e08047afe533b028f208e2a2cfc

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -2,12 +2,12 @@
 
 BINS=
 SUBDIRS=
-
+MANDIR=/usr/share/man
 
 all:
 
 install:
-	$(INSTALL) $(wildcard *.8) /usr/share/man/man8/
+	$(INSTALL) $(wildcard *.8) $(PREFIX)$(MANDIR)/man8/
 
 
 include ../common.mak
